# routes/owner/owner.routes.js
@@ -2,12 +2,15 @@ const express = require("express");
 const Router = express.Router();
 const {
     registerOwner,
-    getAllOwners
+    getAllOwners,
+    getOwnerVehicles
 } = require("../../controllers/owner/owner.controller");
 const {
     protect,
     role
 } = require("../../middleware/protect");
 Router.get('/', protect, getAllOwners)
-Router.post('/register', protect,registerOwner);
+Router.post('/register', protect, registerOwner);
+///get owner vehicles
+Router.get('/:id/vehicles', protect, getOwnerVehicles);
 module.exports.ownerRoutes = Router;
